control using device orientation

--- a/public/index.html
+++ b/public/index.html
@@ -91,6 +91,8 @@
         <div class="head">
           <h3>Logs</h3>
         </div>
+        <input v-model="beta">
+      </input>
         <div class="body">
           <div class="row log" v-for="log in logs">
             <div class="col-sm-2">
